<resources>
    <string name="app_name">RainbowConsole</string>
    <string name="text_login_title">통합 관리 시스템</string>
    <string name="text_hint_id">ID</string>
    <string name="text_hint_pw">PW</string>
    <string name="text_hint_login">로그인</string>
    <string name="text_menu_dashboard">대시보드</string>
    <string name="text_menu_member">회원 관리</string>
    <string name="text_menu_pro">프로 관리</string>
    <string name="text_menu_calc">레슨 정산</string>
    <string name="text_menu_banner">배너 관리</string>
    <string name="text_menu_reserve">예약관리</string>
    <string name="text_menu_setting">설정</string>
    <string name="text_menu_logout">로그아웃</string>
    <string name="text_hint_search_member">회원 검색</string>
    <string name="text_btn_search">검색</string>
    <string name="text_branch_status">매장 현황</string>
    <string name="text_btn_lesson_history">레슨 기록</string>
    <string name="test_btn_member_info">회원 관리</string>
    <string name="text_btn_confirm">확인</string>
    <string name="text_btn_cancel">취소</string>
    <string name="text_pro_name">이름</string>
    <string name="text_pro_phone">전화번호</string>
    <string name="text_pro_branch">지점</string>
    <string name="text_pro_webpage">소개 페이지</string>
    <string name="text_birthday">생년월일</string>
    <string name="text_gender">성별</string>
    <string name="text_email">E-mail</string>
    <string name="text_branch">지점</string>
    <string name="text_lesson_type">레슨권</string>
    <string name="text_allow_lesson_reserve">레슨 예약 허용</string>
    <string name="text_total_lesson">레슨 등록 횟수</string>
    <string name="text_lesson_used">레슨 사용 횟수</string>
    <string name="text_lesson_cancel">레슨 취소 횟수</string>
    <string name="text_lesson_start">레슨 시작일</string>
    <string name="text_lesson_finish">레슨 종료일</string>
    <string name="text_member_memo">회원 메모</string>
    <string name="text_member_log">회원 로그</string>
    <string name="text_member_info_title">회원 정보 수정</string>
    <string name="text_description">설명</string>
    <string name="text_dialog_message">팝업 메세지</string>
    <string name="text_image_url">이미지 주소</string>
    <string name="text_redirection">리디렉션 주소</string>
</resources>