<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:weightSum="2"
    android:orientation="horizontal"
    tools:context=".view.activity.LoginActivity">
    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical"
        >
        <Spinner
            android:id="@+id/spinner_branch"
            android:layout_width="300dp"
            android:layout_height="50dp"
            />
        <EditText
            android:id="@+id/input_email"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:inputType="textEmailAddress"
            android:hint="@string/text_hint_id"
            style="@style/loginInput"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            />
        <EditText
            android:id="@+id/input_password"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:inputType="textPassword"
            android:hint="@string/text_hint_pw"
            style="@style/loginInput"
            android:layout_marginBottom="10dp"
            />
        <Button
            android:id="@+id/btn_login"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:text="@string/text_hint_login"
            android:theme="@style/loginButton"
            />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@color/sky_blue">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:orientation="vertical"
            android:gravity="center"
            android:stateListAnimator="@null"
            android:padding="0dp"
            >

            <ImageView
                android:id="@+id/img_logo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/rainbow_logo" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textSize="30sp"
                android:textStyle="bold"
                android:text="@string/text_login_title"/>
        </LinearLayout>
    </RelativeLayout>

</LinearLayout>