<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/text_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:text="@string/text_member_info_title"
        android:layout_marginBottom="5dp"
        android:textColor="@color/black"
        android:textSize="22sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/text_title"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:background="@color/black" />


    <LinearLayout
        android:id="@+id/layout_input_name_phone_birthday"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@id/text_title"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="5dp"
        android:orientation="horizontal"
        android:background="@drawable/design_edit_pro_layout"
        android:elevation="10dp"

        android:layout_marginBottom="15dp">
        <TextView
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:text="@string/text_pro_name"
            android:gravity="center"
            />
        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/black"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            />

        <TextView
            android:id="@+id/text_member_name"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="start|center_vertical"
            android:hint="@string/text_pro_name"
            android:singleLine="true"
            android:padding="10dp"
            android:background="@null"
            />

        <TextView
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:text="@string/text_pro_phone"
            android:gravity="center"
            />
        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/black"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            />

        <EditText
            android:id="@+id/input_member_phone"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="start|center_vertical"
            android:hint="@string/text_pro_phone"
            android:imeOptions="actionNext"
            android:singleLine="true"
            android:padding="10dp"
            android:background="@null"
            android:inputType="phone" />

        <TextView
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:text="@string/text_birthday"
            android:gravity="center"
            />
        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/black"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            />

        <TextView
            android:id="@+id/input_member_birthday"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"

            android:gravity="start|center_vertical"
            android:hint="@string/text_birthday"
            android:singleLine="true"
            android:padding="10dp"
            android:background="@null"
            />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_email_branch_gender"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@id/layout_input_name_phone_birthday"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:orientation="horizontal"
        android:background="@drawable/design_edit_pro_layout"
        android:elevation="10dp"

        android:layout_marginBottom="15dp">

        <TextView
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:text="@string/text_email"
            android:gravity="center"
            />
        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/black"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            />

        <EditText
            android:id="@+id/input_member_email"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:inputType="textEmailAddress"
            android:gravity="start|center_vertical"
            android:hint="@string/text_email"
            android:imeOptions="actionNext"
            android:singleLine="true"
            android:padding="10dp"
            android:background="@null"
            />

        <TextView
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:text="@string/text_branch"
            android:gravity="center"
            />
        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/black"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            />

        <TextView
            android:id="@+id/text_member_branch"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="start|center_vertical"
            android:hint="@string/text_branch"
            android:singleLine="true"
            android:padding="10dp"
            android:background="@null"
            />

        <TextView
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:text="@string/text_gender"
            android:gravity="center"
            />

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:background="@color/black" />

        <TextView
            android:id="@+id/text_member_gender"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="start|center_vertical"
            android:hint="@string/text_gender"
            android:singleLine="true"
            android:padding="10dp"
            android:background="@null"
            />
    </LinearLayout>



    <!--  담당 프로 및 레슨권  -->
    <LinearLayout
        android:id="@+id/layout_lesson_information"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@id/layout_email_branch_gender"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="15dp"
        android:background="@drawable/design_edit_pro_layout"
        android:elevation="10dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:text="@string/text_lesson_type"
            android:gravity="center"
            />
        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/black"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            />

        <TextView
            android:id="@+id/text_lesson_type"
            android:layout_width="100dp"
            android:layout_height="match_parent"

            android:gravity="start|center_vertical"
            android:singleLine="true"
            android:padding="10dp"
            android:background="@null"
            />

        <TextView
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:text="@string/text_allow_lesson_reserve"
            android:gravity="center"
            />
        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/black"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            />

        <Spinner
            android:id="@+id/spinner_reserve_allow"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="start|center_vertical"
            android:hint="@string/text_email"
            android:imeOptions="actionNext"
            android:singleLine="true"
            android:padding="10dp"
            android:background="@null"
            />

        <TextView
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:text="@string/text_total_lesson"
            android:gravity="center"
            />
        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/black"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            />

        <TextView
            android:id="@+id/text_lesson_total"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="start|center_vertical"
            android:singleLine="true"
            android:padding="10dp"
            android:background="@null"
            />

        <TextView
            android:layout_width="120dp"
            android:layout_height="match_parent"
            android:text="@string/text_lesson_used"
            android:gravity="center"
            />
        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/black"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            />

        <TextView
            android:id="@+id/text_lesson_used"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="start|center_vertical"
            android:imeOptions="actionNext"
            android:singleLine="true"
            android:padding="10dp"
            android:background="@null"
            />
        <TextView
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:text="@string/text_lesson_cancel"
            android:gravity="center"
            />
        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/black"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            />

        <TextView
            android:id="@+id/text_lesson_cancel"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="start|center_vertical"
            android:imeOptions="actionNext"
            android:singleLine="true"
            android:padding="10dp"
            android:background="@null"
            />
    </LinearLayout>


    <!--  레슨 시작일 종료일  -->
    <LinearLayout
        android:id="@+id/layout_lesson_period"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@id/layout_lesson_information"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="5dp"
        android:orientation="horizontal"
        android:background="@drawable/design_edit_pro_layout"
        android:elevation="10dp"

        android:layout_marginBottom="15dp">
        <TextView
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:text="@string/text_lesson_start"
            android:gravity="center"
            />
        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/black"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="start|center_vertical"
            android:singleLine="true"
            android:padding="10dp"
            android:background="@null"
            />

        <TextView
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:text="@string/text_lesson_finish"
            android:gravity="center"
            />
        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/black"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="start|center_vertical"
            android:singleLine="true"
            android:padding="10dp"
            android:background="@null"
            />
    </LinearLayout>

    <TextView
        android:id="@+id/text_member_memo_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/layout_lesson_period"
        android:text="@string/text_member_memo"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="5dp"
        android:textSize="18sp"
        />

    <ScrollView
        android:id="@+id/scroll_view_memo"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_below="@id/text_member_memo_title"
        android:layout_marginStart="20dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/design_edit_pro_layout"
        android:padding="5dp">

        <EditText
            android:id="@+id/input_member_memo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:gravity="start|top"
            android:inputType="textMultiLine"
            android:textSize="16sp"
            android:importantForAutofill="no" />
    </ScrollView>

    <TextView
        android:id="@+id/text_member_log_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/scroll_view_memo"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="5dp"
        android:text="@string/text_member_log"
        android:textSize="18sp" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_below="@id/text_member_log_title"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/design_edit_pro_layout"
        android:padding="5dp">

        <EditText
            android:id="@+id/input_member_log"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:enabled="false"
            android:gravity="start|top"
            android:scrollbars="vertical"
            android:textSize="16sp"
            android:inputType="textMultiLine"
            android:importantForAutofill="no" />
    </ScrollView>


    <LinearLayout

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginEnd="10dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        >
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/design_rounded_rectangle"
            android:backgroundTint="@color/cancel_red"
            android:text="@string/text_btn_cancel"
            android:textColor="@color/white"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            />
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_update"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/design_rounded_rectangle"
            android:backgroundTint="@color/sky_blue"
            android:text="@string/text_btn_confirm"
            android:textColor="@color/white"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            />
    </LinearLayout>

</RelativeLayout>