<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android">
    <data>
        <variable
            name="editBannerViewModel"
            type="com.rainbow.rainbowconsole.view_model.fragment.EditBannerViewModel" />
    </data>
    <RelativeLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/text_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="5dp"
            android:textColor="@color/black"
            android:textSize="22sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@id/text_title"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:background="@color/black" />


        <LinearLayout
            android:id="@+id/layout_input_description"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal"
            android:layout_below="@id/text_title"
            android:layout_marginTop="10dp"
            android:background="@drawable/design_edit_pro_layout"
            android:elevation="10dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp">
            <TextView
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:text="@string/text_description"
                android:gravity="center"
                />
            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@color/black"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                />

            <EditText
                android:id="@+id/input_description"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="start|center_vertical"
                android:hint="@string/text_description"
                android:imeOptions="actionNext"
                android:singleLine="true"
                android:padding="10dp"
                android:background="@null"
                />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/layout_dialog_title"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal"
            android:layout_below="@id/layout_input_description"
            android:layout_marginTop="10dp"
            android:background="@drawable/design_edit_pro_layout"
            android:elevation="10dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp">
            <TextView
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:text="@string/text_dialog_message"
                android:gravity="center"
                />
            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@color/black"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                />

            <EditText
                android:id="@+id/input_dialog_title"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="start|center_vertical"
                android:hint="@string/text_dialog_message"
                android:imeOptions="actionNext"
                android:singleLine="true"
                android:padding="10dp"
                android:background="@null"
                />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/layout_image_url"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal"
            android:layout_below="@id/layout_dialog_title"
            android:layout_marginTop="10dp"
            android:background="@drawable/design_edit_pro_layout"
            android:elevation="10dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp">
            <TextView
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:text="@string/text_image_url"
                android:gravity="center"
                />
            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@color/black"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                />

            <EditText
                android:id="@+id/input_image_url"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="start|center_vertical"
                android:hint="@string/text_image_url"
                android:imeOptions="actionNext"
                android:singleLine="true"
                android:padding="10dp"
                android:background="@null"
                />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/layout_redirect_url"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal"
            android:layout_below="@id/layout_image_url"
            android:layout_marginTop="10dp"
            android:background="@drawable/design_edit_pro_layout"
            android:elevation="10dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp">
            <TextView
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:text="@string/text_redirection"
                android:gravity="center"
                />
            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@color/black"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                />

            <EditText
                android:id="@+id/input_redirect_url"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="start|center_vertical"
                android:hint="@string/text_redirection"
                android:imeOptions="actionNext"
                android:singleLine="true"
                android:padding="10dp"
                android:background="@null"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            >
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_btn_cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/design_rounded_rectangle"
                android:backgroundTint="@color/cancel_red"
                android:text="@string/text_btn_cancel"
                android:textColor="@color/white"
                android:layout_margin="10dp"/>
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_confirm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/design_rounded_rectangle"
                android:backgroundTint="@color/sky_blue"
                android:text="@string/text_btn_confirm"
                android:textColor="@color/white"
                android:layout_margin="10dp"/>
        </LinearLayout>

    </RelativeLayout>
</layout>
